[package]
name = "scheme-rs"
version = "0.1.0"
edition = "2024"
authors = ["Matthew Plant <maplant@protonmail.com>"]
description = "Embedded scheme for the Rust ecosystem"
license = "MPL-2.0"
keywords = ["scheme", "JIT", "async", "scripting"]

documentation = "https://docs.rs/crate/scheme-rs"
homepage = "https://github.com/maplant/scheme-rs"
repository = "https://github.com/maplant/scheme-rs"

[dependencies]
async-stream = { version = "0.3", optional = true }
by_address = "1.2"
clap = { version = "4", features = ["derive"] }
derive_builder = "0.20"
futures = { version = "0.3", optional = true }
hashbrown = "0.16.1"
indexmap = "2"
inventory = "0.3"
malachite = { version = "0.9", features = ["floats"] }
memchr = "2.7"
num = "0.4"
parking_lot = "0.12.5"
rand = { version = "0.9", features = ["thread_rng"] }
rust-embed = { version = "8", features = ["debug-embed"] }
rustc-hash = "2.1"
rustyline = { version = "17", features = ["derive"] }
scheme-rs-macros = { version = "0.1.0-alpha.1", path = "proc-macros" }
unicode_categories = "0.1"

# TODO: Remove this dependency
stacksafe = "1"

# Cranelift dependencies
cranelift = "0.122"
cranelift-jit = "0.122"
cranelift-native = "0.122"
cranelift-module = "0.122"

# Optional dependencies
tokio = { version = "1.47", features = ["full"], optional = true }

[features]
default = ["load-libraries-from-fs", "store-source"]
async = ["dep:futures", "dep:async-stream"]
load-libraries-from-fs = []
store-source = []

[profile.release]
lto = true

[build-dependencies]
nom = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "cold_boot"
harness = false

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "integrate"
harness = false

[[bench]]
name = "yin_yang"
harness = false
